# MissionConverter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  defines.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
